# serializer version: 1
# name: test_number_entities[number.hdfury_vrroom_02_earc_unmute_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 1000,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.hdfury_vrroom_02_earc_unmute_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'eARC unmute delay',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'eARC unmute delay',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'earc_unmute',
    'unique_id': '000123456789_earcunmutecnt',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_number_entities[number.hdfury_vrroom_02_earc_unmute_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'HDFury VRROOM-02 eARC unmute delay',
      'max': 1000,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.hdfury_vrroom_02_earc_unmute_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_number_entities[number.hdfury_vrroom_02_oled_fade_timer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 1,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.hdfury_vrroom_02_oled_fade_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'OLED fade timer',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'OLED fade timer',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oled_fade',
    'unique_id': '000123456789_oledfade',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_number_entities[number.hdfury_vrroom_02_oled_fade_timer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'HDFury VRROOM-02 OLED fade timer',
      'max': 100,
      'min': 1,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.hdfury_vrroom_02_oled_fade_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_number_entities[number.hdfury_vrroom_02_restart_timer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.hdfury_vrroom_02_restart_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Restart timer',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Restart timer',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reboot_timer',
    'unique_id': '000123456789_reboottimer',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_number_entities[number.hdfury_vrroom_02_restart_timer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'HDFury VRROOM-02 Restart timer',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.hdfury_vrroom_02_restart_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_number_entities[number.hdfury_vrroom_02_unmute_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 1000,
      'min': 50,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.hdfury_vrroom_02_unmute_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Unmute delay',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Unmute delay',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'audio_unmute',
    'unique_id': '000123456789_unmutecnt',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_number_entities[number.hdfury_vrroom_02_unmute_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'HDFury VRROOM-02 Unmute delay',
      'max': 1000,
      'min': 50,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.hdfury_vrroom_02_unmute_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '500.0',
  })
# ---
